# Edge_viewer

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/edgeviewer/: Camera2Controller.kt  GLRenderer.kt  ImageUtil.kt  MainActivity.kt  NativeBridge.kt
app/src/main/jni/: native_lib.cpp
app/src/main/res/layout/: activity_main.xml
web/: index.html  package-lock.json  package.json  viewer.js  viewer.ts
